--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@ SOFTWARE.
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>Zennoh Viewer</title>
+    <title>BiCAmon</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/main.css">
     {% block extracss %}{% endblock %}
